--- a/src/map-style.css
+++ b/src/map-style.css
@@ -8,6 +8,7 @@
 	padding: 0.75em 0 0 0;
 	color: #1a1a1a;
 	border-top: 1px solid #ccc;
+	clear: both;
 }
 .rg-header {
 	margin-bottom: 0.5em;
@@ -47,20 +48,6 @@
 	font-size: 0.65em;
 	line-height: 1.5em;
 }
-@media (max-width: 640px) {
-.rg-source-and-credit > div {
-	width: 100%;
-	display: block;
-	float: none;
-	text-align: right;
-}
-.rg-container.pull-map-right {
-	float: none;
-	max-width: 100%;
-	width: 100%;
-	margin-left: 0;
-}
-}
 /*styles for graphic*/
 .rg-map {
 	margin: 0;
@@ -91,6 +78,7 @@
 .rg-map-container {
 	width: 100%;
 	height: 320px;
+	overflow: hidden;
 }
 .leaflet-container p.rg-map-popup {
 	padding: 0 0.75em 0.5em 0.75em;
@@ -98,4 +86,18 @@
 }
 .leaflet-container .leaflet-control-attribution {
 	display: none;
+}
+@media (max-width: 640px) {
+.rg-source-and-credit > div {
+	width: 100%;
+	display: block;
+	float: none;
+	text-align: right;
+}
+.rg-container.pull-map-right {
+	float: none;
+	max-width: 100%;
+	width: 100%;
+	margin-left: 0;
+}
 }
