--- a/src/map-style.css
+++ b/src/map-style.css
@@ -4,9 +4,8 @@
 	font-size: 16px;
 	line-height: 1;
 	margin: 1em 0;
-	padding: 0.75em 0 0 0;
+	padding: 0;
 	color: #1a1a1a;
-	border-top: 1px solid #ccc;
 	clear: both;
 }
 .rg-header {
